[package]
name = "cnbc_news_sentiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
csv = "1.3.0"
fluvio = "0.23.1"
fluvio-protocol = "0.11.0"
fluvio-smartmodule = "0.7.4"
futures-util = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
